themes/default/scss/primeng/theme.scss
/* ... */
.ui-autocomplete-token-icon.fa-close{
  flex: 0 0 auto;
  margin-top: -10px;
  right: 0px;
  padding: 4px;
  cursor: pointer;
  font-size: 12px;
  &:hover{
    background-color: rgba(255,255,255,0.3);
    border: 0px solid rgba(255,255,255,0.3);
    border-radius: 3px;
  }
}

// drop down
.ui-dropdown-item.ui-corner-all{
  min-height: 32px;
  padding: 6px;
  &.ui-state-highlight {
    font-weight: bold;
    color: #000000;
    &:after{
      font-family: 'kmcng-icon-pack';
      content: "\e91a";
      font-weight: normal;
      float: right;
      font-size: 12px;
      padding-top: 2px;
    }
  }
}
.ui-dropdown-panel .ui-dropdown-item:not(.ui-state-highlight):hover{
  background-color: $kGrayscale6;
}
.ui-dropdown-label.ui-inputtext{
  background-color: #ffffff;
}
.ui-dropdown label{
  height: 32px;
  line-height: 22px;
  padding-left: 8px;
  &:hover{
    color: $kPrimary;
  }
}
.ui-dropdown-trigger{
  border: 0px !important;
  .fa.fa-caret-down {
    margin-top: 0.4em;
    position: absolute;
    color: $kGrayscale3;
  }
}
// multi select
.ui-multiselect-item.ui-corner-all{
  label{
    font-size: 15px;
    font-weight: 400;
  }
}

// dialogues
.ui-dialog.ui-confirmdialog {
  .ui-dialog-titlebar {
    height: 80px;
    border-bottom: 1px solid $kGrayscale4;
    text-align: center;
    padding-top: 28px;
  }
  .ui-dialog-title{
    color: $kGrayscale1;
    font-size: 24px;
    font-weight: 700;
  }
  .ui-dialog-content.ui-widget-content{
    text-align: center;
    padding-top: 28px;
    padding-bottom: 28px;
  }
  .ui-dialog-buttonpane{
    text-align: center;
    button{
      color: $kGrayscale1;
      font-weight: 400;
      float: none;
      .ui-button-text{
        padding-right: 2.1em;
      }
      &:hover {
        color: $kPrimary;
      }
      &:active {
        box-shadow: inset 0px 1px 3px 0 rgba(0, 0, 0, 0.50);
      }
    }
  }
}

// messages
.ui-growl-item-container.ui-state-highlight{

  color: white;
  .ui-growl-title{
    display: none;
  }
  .ui-growl-icon-close.fa.fa-close{
    top: 9px;
    right: 9px;
    font-size: 14px;
  }
  .ui-growl-icon-close.fa.fa-close:before{
    @extend .kIconclose_small:before;

  }
  .ui-growl-image{
    margin-top: 5px;
    margin-left: 10px;
    &.fa-check:before{
      @extend .kIconcheck_large:before;
    }

    &.fa-minus:before{
      @extend .kIconpen:before;
    }
  }
  &.ui-growl-message-success{
    background-color: $kSecondary;
  }
  &.ui-growl-message-error{
    background-color: $kDandger;
  }
}

// spinner
.ui-spinner.ui-widget{
  height: 24px;
  .ui-spinner-button{
    height: 13px;
  }
  .ui-spinner-up{
    top: 1px;
  }
  .ui-spinner-down{
    top: 13px;
  }
}
// tooltip
.ng-tooltip {
  word-wrap: break-word;
  white-space: pre-wrap;
  background-color: black;
  color: #ffffff;
  font-size: 14px;
  text-align: center;
  border-radius: 3px;
  padding: 5px 8px;
  position: absolute;
  z-index: 1000;
  display: block;
  opacity: 0;
  -webkit-transition: opacity 300ms;
  -moz-transition: opacity 300ms;
  -o-transition: opacity 300ms;
  transition: opacity 300ms;
}

.ng-tooltip-show {
  opacity: 1;
}

.ng-tooltip::after {
  content: "";
  position: absolute;
  border-style: solid;
}

.ng-tooltip-top::after {
  top: 100%;
  left: 50%;
  height: 0px;
  margin-left: -5px;
  border-width: 5px;
  border-color: black transparent transparent transparent;
}

.ng-tooltip-bottom::after {
  bottom: 100%;
  left: 50%;
  height: 0px;
  margin-left: -5px;
  border-width: 5px;
  border-color: transparent transparent black transparent;
}

.ng-tooltip-left::after {
  top: 50%;
  left: 100%;
  margin-top: -5px;
  border-width: 5px;
  border-color: transparent transparent transparent black;
}

.ng-tooltip-right::after {
  top: 50%;
  right: 100%;
  margin-top: -5px;
  border-width: 5px;
  border-color: transparent black transparent transparent;
}
// spinner animation
.k-spinner-background {
  width: 100%;
  height: 100%;
  margin-top: -8px;
  background-color: rgba(255, 255, 255, 0.7);
  position: absolute;
  top: 0;
  left: 0;
}
.k-spinner-animation,
.k-spinner-animation:after {
  border-radius: 50%;
  width: 20px;
  height: 20px;
}
.k-spinner-animation {
  margin: 0px auto;
  font-size: 10px;
  position: relative;
  text-indent: -9999em;
  border-top: 4px solid rgba(131,131,131, 0.2);
  border-right: 4px solid rgba(131,131,131, 0.2);
  border-bottom: 4px solid rgba(131,131,131, 0.2);
  border-left: 4px solid #838383;
  -webkit-transform: translateZ(0);
  -ms-transform: translateZ(0);
  transform: translateZ(0);
  -webkit-animation: load8 1.1s infinite linear;
  animation: load8 1.1s infinite linear;
}
@-webkit-keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
@keyframes load8 {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}
// modal overlay
.kPopupWidgetModalOverlay, .ui-widget-overlay{
  background-color: #263243 !important;
  opacity: 0.9 !important;
}
// confirmation dialogue
.ui-dialog.ui-confirmdialog.ui-widget.ui-widget-content.ui-corner-all{
  border-radius: 4px;
  box-shadow: 0 16px 20px 0 rgba(0,0,0,0.3);
}
.ui-dialog.ui-confirmdialog .ui-dialog-titlebar.ui-widget-header{
  height: 78px;
}
.ui-dialog.ui-confirmdialog .ui-dialog-footer{
  text-align: center;
  .ui-button-text{
    padding: .25em 2.1em .25em 2.1em;
  }
  button{
    color: $kGrayscale1;
    &:hover{
      color: $kPrimary;
    }
  }
}
.ui-dialog-buttonpane.ui-widget-content{
  border: 0;
  border-top: 1px solid #d9d9d9;
  height: 66px;
  padding-top: 8px;
  button{
    height: 34px;
  }
}
// list box
.ui-listbox.ui-inputtext{
  width: 100%;
}

